# pydantic-htmx

./: README.md  order_form.html  pyproject.toml
examples/: basic_usage.py
src/pydantic_htmx/: __init__.py  field_types.py  form_data.py  form_generator.py  parser.py  templates.py  validators.py
tests/: test_pydantic_htmx.py
