[project]
name = "pydantic-htmx"
version = "0.1.0"
description = "PydanticスキーマからHTMXフォームを自動生成するライブラリ"
readme = "README.md"
authors = [
    { name = "inunekousapon", email = "yukawa@bbt757.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]
keywords = ["pydantic", "htmx", "form", "validation", "html"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black>=25.12.0",
]
